@@ -5,6 +5,9 @@
 Git stable
 ------------------------------------------------------------------------------------------------------------------------
 
+GUI:
+	- Fixed: Unable to add SSL certificate without CA bundle (unexpected line feed in ca_bundle field)
+
 Tickets:
 
 ------------------------------------------------------------------------------------------------------------------------
@@ -15,7 +18,6 @@ Tickets:
 	- RELEASE i-MSCP 1.1.7
 
 Tickets:
-
 	- Fixed: #1090: Bug - Unable to update to 1.1.6 version - Wrong update query
 
 ------------------------------------------------------------------------------------------------------------------------
